# format_afro_currency

./: LICENSE  README.md  setup.cfg
src/format_afro_currency/: __init__.py  currency.py
