[metadata]
# replace with your username:
name = format_afro_currency
version = 0.0.1
author = Miebaka Iwarri
author_email = miebakaiwarri@gmail.com
description = A mini package for displaying formatted african currencies on python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/triple07even/format_afro_currency
project_urls =
    Bug Tracker = https://github.com/triple07even/format_afro_currencyissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
